--- a/src/app.css
+++ b/src/app.css
@@ -41,6 +41,11 @@ h1 {
     color: #213547;
     background-color: #ffffff;
   }
+
+  .hour {
+    color: #ffcc36;
+  }
+
   a:hover {
     color: #747bff;
   }
