--- a/src/app.css
+++ b/src/app.css
@@ -53,3 +53,9 @@ h1 {
     background-color: #f9f9f9;
   }
 }
+
+@media only screen and (max-width: 500px) {
+  .grid {
+    flex-direction: column;
+  }
+}
